--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,10 @@ p {
     line-height: 36px;
     font-weight: 400;
     color: #445161;
+    margin-bottom: 10px;
+}
+.product-text{
+    margin-top: 10px;
 }
 .header h1 {
     font-family: ArialMT;
@@ -211,20 +215,24 @@ p {
 .product-block {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
+    margin-bottom: 50px;
 }
 .bay-product {
     width: 300px;
     height: 300px;
     background: rgb(68, 81, 99);
+    border-radius: 5px;
+    margin-left: 35px;
 }
 .pruduct-title {
-    height: 50px;
     font-family: ArialMT;
     font-size: 24px;
     line-height: 30px;
     font-weight: 400;
     color: rgb(255, 255, 255);
     text-align: center;
+    margin: 10px 0px 10px 0px;
 }
 .price-block {
     height: 65px;
@@ -249,4 +257,27 @@ p {
     color: rgb(255, 255, 255);
     margin: 25px 0px 0px 25px;
 }
-
+.social-link{
+    text-decoration: none;
+    font-family: ArialMT;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 700;
+    text-align: center;
+    color: #445161;
+    display: block;
+    background: #ffffff;
+    padding: 10px 0 10px 0;
+    margin: 15px 15px 0px 15px;
+    border-radius: 5px;
+}
+.premium{
+    height: 400px;
+}
+.lux{
+    height: 500px;
+}
+.footer{
+    background: #445163;
+    height: 500px;
+}
