--- a/css/index.css
+++ b/css/index.css
@@ -279,5 +279,102 @@ p {
 }
 .footer{
     background: #445163;
-    height: 500px;
+    min-height: 500px;
+     align-items: center;
+     display: flex;
+     justify-content: center;
+}
+.form{
+   display: flex;
+   justify-content: center;
+ 
+}    
+
+input{
+  width: 500px;
+  height: 40px; 
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding-left: 10px;
+}
+textarea{
+    resize: none;
+    height: 170px;
+    width: 500px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    padding-left: 10px;
+}
+.button-send{
+    font-family: ArialMT;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #445162;
+    background: #FFFFFF;
+    border-radius: 5px;
+    padding: 5px 30px;
+}
+.button-block{
+    display: flex;
+    justify-content: center;
+}
+    
+.footer-contacts{
+    margin-left: 100px;
+    
+
+}
+.contacts{
+    font-family: ArialMT;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    color: #ffffff;
+    list-style: none;
+    position: relative;
+}
+.contact{
+    margin-bottom: 10px;
+}
+.skype:before{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    content:'';
+    background-image: url(../img/skype_icon.png);
+    background-size: 20px 20px;
+    left: -30px;
+ 
+}
+
+.icq::before{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    content:'';
+    background-image: url(../img/icq_icon.png);
+    background-size: 20px 20px;
+    left: -30px;
+ 
+}
+
+.email::before{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    content:'';
+    background-image: url(../img/email_icon.png);
+    background-size: 20px 20px;
+    left: -30px;
+}
+.phone::before{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    content:'';
+    background-image: url(../img/phone_icon.png);
+    background-size: 20px 20px;
+    left: -30px;
 }
