--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
     padding: 0;  
 
 } 
+
 h2 {
     text-align: center;
     margin-top: 30px;
@@ -12,6 +13,7 @@ h2 {
     font-weight: 400;
     color: rgb(68, 81, 97);
 }
+
 h3 {
     font-family: ArialMT;
     font-size: 24px;
@@ -19,6 +21,7 @@ h3 {
     font-weight: 400;
     color: rgb(68, 81, 97);
 }
+
 p {
     font-family: ArialMT;
     font-size: 16px;
@@ -26,12 +29,14 @@ p {
     font-weight: 400;
     color: rgb(51, 51, 51);
 }
+
 .header {
     min-height: 323px;
     background: #445163;
     display: flex;
     justify-content: space-between; 
 }
+
 .header-title{
     font-family: ArialMT;
     font-size: 30px;
@@ -40,9 +45,11 @@ p {
     color: #445161;
     margin-bottom: 10px;
 }
+
 .product-text{
     margin-top: 10px;
 }
+
 .header h1 {
     font-family: ArialMT;
     font-size: 60px;
@@ -61,6 +68,7 @@ p {
     margin-top: 50px;
     
 }
+
 .header ul {
     font-family: ArialMT;
     font-size: 20px;
@@ -113,14 +121,17 @@ p {
     font-weight: 400;
     color: #445161;
 }
+
 .dignity-list-item{
     max-width: 526px;
     max-height: 63px;
     margin-bottom: 35px;
 }
+
 .dignity-list-item {
         position: relative;
 }
+
 .dignity-list-item:before{
   width: 30px;
     height: 30px;
@@ -131,6 +142,7 @@ p {
     left: -35px;
 
 }
+
 .dignity-list{
     display: flex;
     flex-wrap: wrap;
@@ -142,6 +154,7 @@ p {
     
     background: #F4F6F4;
 }
+
 .item {
     margin-left: 30px;
     
@@ -158,6 +171,7 @@ p {
     font-weight: 400;
     color: rgb(68, 81, 97);
 }
+
 .screenshots-block {
     display: flex;
     flex-wrap: wrap;
@@ -167,9 +181,11 @@ p {
 .screenshots-oject {
     display: flex;
 }
+
 .imag-screenshots {
     margin: 0px 20px 20px 0px;
 }
+
 .screenshots-text {
     max-width: 359px;
     max-height: 108px;
@@ -180,6 +196,7 @@ p {
 .reviews-header {
     background: rgb(244, 246, 244);
 }
+
 .reviews-title {
     text-align: center;
     margin-top: 30px;
@@ -190,19 +207,23 @@ p {
     color: rgb(68, 81, 97);
     padding-top: 20px;
 }
+
 .screenshots-block {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 50px;
 }
+
 .screenshots-oject {
     display: flex;
 }
+
 .coment-fon {
     background-image: url(../img/coment-fon.png);
     margin: 0px 20px 20px 0px;
 }
+
 .coment-text {
     max-width: 436px;
     min-height: 64px;
@@ -218,6 +239,7 @@ p {
     align-items: flex-end;
     margin-bottom: 50px;
 }
+
 .bay-product {
     width: 300px;
     height: 300px;
@@ -225,6 +247,7 @@ p {
     border-radius: 5px;
     margin-left: 35px;
 }
+
 .pruduct-title {
     font-family: ArialMT;
     font-size: 24px;
@@ -234,6 +257,7 @@ p {
     text-align: center;
     margin: 10px 0px 10px 0px;
 }
+
 .price-block {
     height: 65px;
     display: flex;
@@ -242,6 +266,7 @@ p {
     background: white;
     margin: 0px 2px;
 }
+
 .price {
     font-family: ArialMT;
     font-size: 40px;
@@ -249,6 +274,7 @@ p {
     font-weight: 400;
     color: rgb(68, 81, 98);
 }
+
 .product-item {
     font-family: ArialMT;
     font-size: 14px;
@@ -257,6 +283,7 @@ p {
     color: rgb(255, 255, 255);
     margin: 25px 0px 0px 25px;
 }
+
 .social-link{
     text-decoration: none;
     font-family: ArialMT;
@@ -271,12 +298,20 @@ p {
     margin: 15px 15px 0px 15px;
     border-radius: 5px;
 }
+
+.social-link:hover {
+   color: lawngreen;
+   background: lightcoral;
+}
+
 .premium{
     height: 400px;
 }
+
 .lux{
     height: 500px;
 }
+
 .footer{
     background: #445163;
     min-height: 500px;
@@ -287,6 +322,7 @@ p {
 .form{
    display: flex;
    justify-content: center;
+   
  
 }    
 
@@ -316,6 +352,12 @@ textarea{
     border-radius: 5px;
     padding: 5px 30px;
 }
+
+.button-send:hover{
+   color: lawngreen;
+   background: lightcoral;
+}
+
 .button-block{
     display: flex;
     justify-content: center;
@@ -369,6 +411,7 @@ textarea{
     background-size: 20px 20px;
     left: -30px;
 }
+
 .phone::before{
     width: 20px;
     height: 20px;
@@ -377,4 +420,18 @@ textarea{
     background-image: url(../img/phone_icon.png);
     background-size: 20px 20px;
     left: -30px;
+}
+
+.icon {
+    display: block;
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+
+}
+
+.icon-social{
+    display: flex;
+    margin-top: 20px;
+    
 }
